// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`layout works as expected with no tabs 1`] = `
<RCTScrollView
  automaticallyAdjustContentInsets={false}
  scrollsToTop={true}
>
  <View>
    <View
      style={
        Object {
          "paddingLeft": 40,
          "paddingRight": 40,
        }
      }
    >
      <Header
        artist={
          Object {
            "birthday": null as any,
            "counts": Object {
              "articles": 0,
              "artworks": 0,
              "partner_shows": 0,
            },
            "current_shows": null as any,
            "has_metadata": false,
            "id": null as any,
            "internalID": null as any,
            "name": null as any,
            "nationality": null as any,
            "past_large_shows": null as any,
            "past_small_shows": null as any,
            "upcoming_shows": null as any,
          }
        }
      />
      <View
        style={
          Object {
            "paddingTop": 30,
          }
        }
      />
    </View>
  </View>
</RCTScrollView>
`;

exports[`layout works as expected with one tab 1`] = `
<RCTScrollView
  automaticallyAdjustContentInsets={false}
  scrollsToTop={true}
>
  <View>
    <View
      style={
        Object {
          "paddingLeft": 40,
          "paddingRight": 40,
        }
      }
    >
      <Header
        artist={
          Object {
            "birthday": null as any,
            "counts": Object {
              "articles": 0,
              "artworks": 0,
              "partner_shows": 0,
            },
            "current_shows": null as any,
            "has_metadata": true,
            "id": null as any,
            "internalID": null as any,
            "name": null as any,
            "nationality": null as any,
            "past_large_shows": null as any,
            "past_small_shows": null as any,
            "upcoming_shows": null as any,
          }
        }
      />
      <View
        style={
          Object {
            "paddingTop": 30,
          }
        }
      >
        <About
          artist={
            Object {
              "birthday": null as any,
              "counts": Object {
                "articles": 0,
                "artworks": 0,
                "partner_shows": 0,
              },
              "current_shows": null as any,
              "has_metadata": true,
              "id": null as any,
              "internalID": null as any,
              "name": null as any,
              "nationality": null as any,
              "past_large_shows": null as any,
              "past_small_shows": null as any,
              "upcoming_shows": null as any,
            }
          }
        />
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`layout works as expected with three tabs 1`] = `
<RCTScrollView
  automaticallyAdjustContentInsets={false}
  scrollsToTop={true}
>
  <View>
    <View
      style={
        Object {
          "paddingLeft": 40,
          "paddingRight": 40,
        }
      }
    >
      <Header
        artist={
          Object {
            "birthday": null as any,
            "counts": Object {
              "artworks": 2,
              "partner_shows": 1,
            },
            "current_shows": null as any,
            "has_metadata": true,
            "id": null as any,
            "internalID": null as any,
            "name": null as any,
            "nationality": null as any,
            "past_large_shows": null as any,
            "past_small_shows": null as any,
            "upcoming_shows": null as any,
          }
        }
      />
      <View>
        <SwitchView
          onSelectionChange={[Function]}
          selectedIndex={1}
          style={
            Object {
              "marginBottom": 30,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 30,
            }
          }
          titles={
            Array [
              "ABOUT",
              "WORKS",
              "SHOWS",
            ]
          }
        />
        <View>
          <Artworks
            artist={
              Object {
                "birthday": null as any,
                "counts": Object {
                  "artworks": 2,
                  "partner_shows": 1,
                },
                "current_shows": null as any,
                "has_metadata": true,
                "id": null as any,
                "internalID": null as any,
                "name": null as any,
                "nationality": null as any,
                "past_large_shows": null as any,
                "past_small_shows": null as any,
                "upcoming_shows": null as any,
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;
